@@ -20,7 +20,6 @@ elvi.1sr.gz @mandir@/man1/cite.1sr.gz
 elvi.1sr.gz @mandir@/man1/cia.1sr.gz
 elvi.1sr.gz @mandir@/man1/cliki.1sr.gz
 elvi.1sr.gz @mandir@/man1/cnn.1sr.gz
-elvi.1sr.gz @mandir@/man1/codesearch.1sr.gz
 elvi.1sr.gz @mandir@/man1/comlaw.1sr.gz
 elvi.1sr.gz @mandir@/man1/ctan.1sr.gz
 elvi.1sr.gz @mandir@/man1/currency.1sr.gz
@@ -90,7 +89,6 @@ elvi.1sr.gz @mandir@/man1/rhyme.1sr.gz
 elvi.1sr.gz @mandir@/man1/rpmsearch.1sr.gz
 elvi.1sr.gz @mandir@/man1/scholar.1sr.gz
 elvi.1sr.gz @mandir@/man1/scicom.1sr.gz
-elvi.1sr.gz @mandir@/man1/scitopia.1sr.gz
 elvi.1sr.gz @mandir@/man1/scirus.1sr.gz
 elvi.1sr.gz @mandir@/man1/scpan.1sr.gz
 elvi.1sr.gz @mandir@/man1/slashdot.1sr.gz
