@@ -3,24 +3,23 @@ EXTRA_DIST = runtests elviwithouttests README COOKIES W.test S.test		\
        archwiki.test arxiv.test ask.test aur.test austlii.test			\
        bbcnews.test bing.test bookfinder.test bugmenot.test				\
        bugzilla.test cablesearch.test cia.test cisco.test cite.test		\
-       cliki.test cnn.test codesearch.test comlaw.test ctan.test		\
-       currency.test cve.test debbugs.test debcodesearch.test			\
-       debcontents.test deblists.test deblogs.test debpackages.test		\
-       debpkghome.test debpts.test debsec.test debvcsbrowse.test		\
-       debwiki.test deja.test deli.test discogs.test dmoz.test			\
-       duckduckgo.test ebay.test etym.test excite.test f5.test			\
-       finkpkg.test foldoc.test freebsd.test freedb.test				\
-       freshmeat.test fsfdir.test gcache.test genbugs.test				\
-       genportage.test github.test gmane.test google.test				\
-       gutenberg.test imdb.test ixquick.test jamendo.test				\
-       javasun.test jquery.test lastfm.test leodict.test l1sp.test		\
-       lsm.test macports.test mathworld.test mdn.test mininova.test		\
-       musicbrainz.test mysqldoc.test netbsd.test ntrs.test				\
-       openbsd.test openports.test opensearch.test oraclesearch.test	\
-       pasearch.test pgdoc.test phpdoc.test pin.test piratebay.test		\
-       pgpkeys.test priberam.test pubmed.test rae.test rfc.test			\
-       rhyme.test rpmsearch.test scholar.test scicom.test				\
-       scitopia.test scirus.test scpan.test slashdot.test				\
+       cliki.test cnn.test comlaw.test ctan.test currency.test			\
+       cve.test debbugs.test debcodesearch.test debcontents.test		\
+       deblists.test deblogs.test debpackages.test debpkghome.test		\
+       debpts.test debsec.test debvcsbrowse.test debwiki.test			\
+       deja.test deli.test discogs.test dmoz.test duckduckgo.test		\
+       ebay.test etym.test excite.test f5.test finkpkg.test				\
+       foldoc.test freebsd.test freedb.test freshmeat.test				\
+       fsfdir.test gcache.test genbugs.test genportage.test				\
+       github.test gmane.test google.test gutenberg.test imdb.test		\
+       ixquick.test jamendo.test javasun.test jquery.test lastfm.test	\
+       leodict.test l1sp.test lsm.test macports.test mathworld.test		\
+       mdn.test mininova.test musicbrainz.test mysqldoc.test			\
+       netbsd.test ntrs.test openbsd.test openports.test				\
+       opensearch.test oraclesearch.test pasearch.test pgdoc.test		\
+       phpdoc.test pin.test piratebay.test pgpkeys.test priberam.test	\
+       pubmed.test rae.test rfc.test rhyme.test rpmsearch.test			\
+       scholar.test scicom.test scirus.test scpan.test slashdot.test	\
        slinuxdoc.test sourceforge.test springer.test stack.test			\
        stockquote.test thesaurus.test translate.test urban.test			\
        w3css.test w3html.test w3link.test w3rdf.test wayback.test		\
